# ray-tracer-1w

./: CMakeLists.txt  image.ppm
ray_tracer_1w/: CMakeLists.txt  color.h  main.cpp  ray.h  ray_tracer_1w.h  vec3.h
